# c_library_orm

./: .gitignore  CMakeLists.txt  main.c
internal/db/: dbc.h  sql_cred.h  sql_result.h  util.h
internal/db/orm/: address.h  author.h  author_book.h  book.h  book_specimen.h  employee.h  entity.h  library.h  municipality.h  person.h  reader.h  region.h  rent.h
internal/ui/: display.h  format.h  input.h  layout.h  state.h  util.h
internal/ui/forms/: forms.h  municipality_form.h  region_form.h
internal/ui/util/: util.h
internal/ui/views/: form.h  list.h
scripts/: struct.py
sql_struct/: .gitignore  function.py  generate.py  header.py  index.js  sql_types.py  struct.py
sql_struct/common/internal/db/: dbc.h  sql_result.h
sql_struct/common/src/db/: dbc.c
src/: dbc.c
src/db/: dbc.c  util.c
src/db/orm/: address.c  author.c  author_book.c  book.c  book_specimen.c  employee.c  library.c  municipality.c  person.c  reader.c  region.c  region_form.c  rent.c
src/ui/: display.c  input.c  layout.c  state.c  util.c
src/ui/forms/: address_form.c  book_form.c  employee_form.c  municipality_form.c  person_form.c  region_form.c
src/ui/util/: util.c
src/ui/views/: form.c  list.c  popup.c
